[package]
name = "phlex-emmet-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-lsp = { version = "0.2.0", features = ["tokio"] }
ropey = "1.6.1"
tokio = { version = "1.38.0", features = ["tracing", "tokio-macros", "full"] }
tower = "0.4.13"
tracing-subscriber = "0.3.18"
