[package]
name = "phlex_emmet_ls"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["lsp", "ruby", "emmet"]
categories = ["command-line-utilities"]
repository = "https://github.com/lrangell/phlex-emmet-lsp"
description = "A language server for generating Phlex code from Emmet abbreviations"

[dependencies]
anyhow = "1.0.86"
async-lsp = { version = "0.2.0", features = ["tokio"] }
bon = "2.3.0"
criterion = "0.5.1"
env_logger = "0.11.5"
itertools = "0.13.0"
log = "0.4.22"
miette = "7.2.0"
peg = "0.8.4"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
ropey = "1.6.1"
tokio = { version = "1.38.0", features = ["tracing", "tokio-macros", "full"] }
tower = "0.4.13"
tracing = "0.1.41"
tracing-subscriber = "0.3.18"

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace", "color"] }

[[bench]]
name = "bench"
harness = false
